List pkgs used in egs in Suggest field

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -7,9 +7,8 @@ Author: Andy Wills, Joscha Dutli, Klaus Oberauer
 Maintainer: Joscha Dutli <joscha.dutli@psychologie.uzh.ch>
 Description: Individual-subject data from benchmark working memory experiments.
 License: GPL (>= 2)
-Imports:
-	tidyverse, dplyr, Hmisc
 LazyData: true
 LazyDataCompression: xz
+Suggests: circular, dplyr, Hmisc, plyr, tidyr, tidyverse
 Depends: R (>= 3.5)
 
